--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "typescript-template",
-    "version": "1.0.0",
+    "name": "figit",
+    "version": "0.0.1",
     "description": "A template for a TypeScript app. To make it easier to start a new app without having to go through all the configuration.",
     "main": "build/index.js",
     "types": "build/index.d.ts",
@@ -22,19 +22,19 @@
         "test:watch": "jest --watch"
     },
     "bin": {
-        "typescript-template-cli": "./bin/cli"
+        "figit": "./bin/cli"
     },
     "repository": {
         "type": "git",
-        "url": "git+https://ashleydavis@github.com/ashleydavis/typescript-template.git"
+        "url": "git+https://ashleydavis@github.com/ashleydavis/figit.git"
     },
     "keywords": [],
     "author": "ashley@codecapers.com.au",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/ashleydavis/typescript-template/issues"
+        "url": "https://github.com/ashleydavis/figit/issues"
     },
-    "homepage": "https://github.com/ashleydavis/typescript-template#readme",
+    "homepage": "https://github.com/ashleydavis/figit#readme",
     "dependencies": {
         "moment": "^2.29.1"
     },
