--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
     },
     "homepage": "https://github.com/ashleydavis/figit#readme",
     "dependencies": {
-        "moment": "^2.29.1"
+        "yaml": "^1.10.0"
     },
     "devDependencies": {
         "@types/jest": "^26.0.20",
         "@types/node": "^14.14.25",
+        "@types/yaml": "^1.9.7",
         "jest": "^26.6.3",
         "nodemon": "^2.0.7",
         "source-map-support": "0.5.19",
