--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     },
     "homepage": "https://github.com/ashleydavis/figit#readme",
     "dependencies": {
+        "minimist": "^1.2.5",
         "yaml": "^1.10.0"
     },
     "devDependencies": {
         "@types/jest": "^26.0.20",
+        "@types/minimist": "^1.2.1",
         "@types/node": "^14.14.25",
         "@types/yaml": "^1.9.7",
         "jest": "^26.6.3",
